--- a/_config.yml
+++ b/_config.yml
@@ -6,7 +6,7 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Cam Huynh
+title: Cam Huynh's website | hqc.me
 email: cam@hqc.me
 description: > # this means to ignore newlines until "baseurl:"
   Cam Huynh is a True Blue (Chelsea fan) and a full-stack developer based in Saigon Vietnam having four-year experience working in web development field.
