--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,13 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Cam Huynh's website | hqc.me
-email: cam@hqc.me
+title: "Cam Huynh's website | hqc.io"
+email: "cam@hqc.me"
 description: > # this means to ignore newlines until "baseurl:"
   Cam Huynh is a True Blue (Chelsea fan) and a full-stack developer based in Saigon Vietnam having four-year experience working in web development field.
   He loves reading books, playing soccer, listening to C-pop (he idolizes Jay Chou). Contact him at: cam@hqc.me
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://hqc.me" # the base hostname & protocol for your site
+url: "https://hqc.io" # the base hostname & protocol for your site
 twitter_username: huynhquancam
 github_username:  huynhquancam
 
