--- a/_config.yml
+++ b/_config.yml
@@ -6,16 +6,16 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: "hqc.io | Cam Huynh"
+title: "hqc.io | Cẩm Huỳnh"
 email: "cam@hqc.me"
 description: > # this means to ignore newlines until "baseurl:"
-  Cam Huynh is a True Blue (Chelsea fan) and a full-stack developer based in Saigon Vietnam having four-year experience working in web development field.
+  Cẩm Huỳnh is a True Blue (Chelsea fan) and a full-stack developer based in Saigon Vietnam having four-year experience working in web development field.
   He loves reading books, playing soccer, listening to C-pop (he idolizes Jay Chou). Contact him at: cam@hqc.me
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://hqc.io" # the base hostname & protocol for your site
 image_url: "https://c1.staticflickr.com/5/4059/5135403866_a6a65ec65e_b.jpg" 
 twitter_username: huynhquancam
-github_username:  huynhquancam
+github_username: huynhquancam
 
 # Build settings
 markdown: kramdown
